2008-09-18  Bradley M. Kuhn  <bkuhn@ebb.org>

	* tests/test-pokeravatar.py.in (PokerAvatarTestCase.doGetStats):
	Wrote method.
	(PokerAvatarTestCase.test77_getStatsWhenLoggedIn): Wrote test.
	(PokerAvatarTestCase.getStatsError): Wrote method.
	(PokerAvatarTestCase.test78_getStatsError): Wrote test.
	(PokerAvatarTestCase.getStatsIgnored): Wrote method.
	(PokerAvatarTestCase.test79_getStatsIgnoredWhenNotAtTable): Wrote
	test.

	* pokernetwork/pokeravatar.py (PokerAvatar.getPlayerStats): Wrote
	method.

	* pokernetwork/pokerpackets.py (PacketPokerGetPlayerStats):
	changed to derive from PacketId

	* pokernetwork/pokeravatar.py (PokerAvatar.handlePacketLogic):
	Added handler for PACKET_POKER_GET_PLAYER_STATS.

	* tests/test-protocol.py.in
	(UGAMEProtocolTestCase.testHandleData): Added new packet.

	* pokernetwork/pokerpackets.py (PacketPokerGetPlayerStats):
	Created packet.

2008-09-18  Johan Euphrosine <proppy@aminche.com>

 	* Release 1.7.0

	* pokernetwork/pokerpackets.py, pokernetwork/pokertable.py,
	  tests/test-pokerpackets.py.in, tests/test-pokertable.py.in: add
	  tourney_serial ('no net') member to PacketPokerTable

2008-09-18  Loic Dachary <loic@dachary.org>

	* pokernetwork/pokerservice.py: all delays must be converted to int
	  (when read from the XML file they are strings)
	* Makefile.am: Add AGPLv3 LICENSE GPLv3 to EXTRA_DIST

2008-09-18  Johan Euphrosine <proppy@aminche.com>

	* pokernetwork/pokertable.py, tests/test-pokertable.py.in: call
	  service.updateTableStats in pokertable.seatPlayer and
	  pokertable.leavePlayer

2008-09-17  Loic Dachary <loic@dachary.org>

	* pokernetwork/pokerpackets.py: add missing
	  PacketFactory[PACKET_POKER_PLAYER_STATS] = PacketPokerPlayerStats

2008-09-17  Bradley M. Kuhn  <bkuhn@ebb.org>

	* tests/test-pokerpackets.py.in
	(PokerPacketsTestCase.test_verifyfactory): Added test to verify
	the PokerFactory and PacketNames variables have proper contents.

2008-09-16  Bradley M. Kuhn  <bkuhn@ebb.org>
